# BoW

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py  seed.py
backend/app/core/: config.py  db.py
backend/app/routers/: activities.py  config.py  dashboard.py  persons.py  projects.py  reports.py  sub_projects.py  submissions.py  teams.py
backend/app/services/: submission.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: AppLayout.tsx  Button.tsx  Card.tsx  Combobox.tsx  Drawer.tsx  EmptyState.tsx  Form.tsx  PageHeader.tsx  Toast.tsx
frontend/src/pages/Config/: ActivitiesTab.tsx  BulkImportModal.tsx  ConfigLayout.tsx  PersonsTab.tsx  ProjectsTab.tsx  SubProjectsTab.tsx  TeamsTab.tsx
frontend/src/pages/Dashboard/: DashboardLayout.tsx  InsightsTab.tsx  StatisticsTab.tsx  TeamSubmissionProgressCard.tsx
frontend/src/pages/Reports/: ReportsPage.tsx
frontend/src/pages/Submit/: ProjectActivitySelect.tsx  SubmitPage.tsx  TeamProgressCard.tsx  TeamSubmitCard.tsx
frontend/src/styles/: global.css  tokens.css
