[tool.poetry]
name = "bow-backend"
version = "0.1.0"
description = "Book of Work — FastAPI backend (PoC)"
authors = ["BoW Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115"
uvicorn = { version = ">=0.30", extras = ["standard"] }
sqlalchemy = ">=2.0.30"
pydantic = { version = ">=2.7", extras = ["email"] }
pydantic-settings = ">=2.3"
python-dateutil = ">=2.9"
loguru = ">=0.7"
openpyxl = ">=3.1"
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
httpx = ">=0.27"
ruff = ">=0.5"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
